# GenericServerSide

./: BestFirstSearch.h  CMakeLists.txt  CacheManager.h  CacheManagerTypes.h  ClientHandler.h  FileCacheManager.cpp  HandlerTypes.h  MatrixProblem.h  MyClientHandler.cpp  MyParallelServer.cpp  MySerialServer.cpp  MyTestClientHandler.cpp  ObjectAdapter.h  README.md  Searchable.h  Searcher.h  ServerTypes.h  Solver.h  SolverTypes.h  State.h  StringReverser.cpp  main.cpp
